# GOAT-1

./: .gitignore  CMakeLists.txt  readme.md
cmake/: externals.cmake  helpers.cmake
resources/shaders/: basic_unlit_frag.hlsl  basic_unlit_vertex.hlsl
src/: main.cpp
src/editor/: CMakeLists.txt  editor_window.cpp  editor_window.hpp  main.cpp
src/game/: CMakeLists.txt  main.cpp
src/shared/: CMakeLists.txt
src/shared/audio/: audio_manager.cpp  audio_manager.hpp
src/shared/renderer/: render_context.cpp  render_context.hpp  renderable.cpp  renderable.hpp  shader.hpp
src/shared/renderer/opengl/: opengl_render_context.cpp  opengl_render_context.hpp
src/shared/renderer/primitives/: shape_2d.cpp  shape_2d.hpp
src/shared/renderer/vulkan/: vulkan_render_context.cpp  vulkan_render_context.hpp
src/shared/utility/: logging.cpp  logging.hpp  optional.hpp
src/shared/utility/file/: file_helper.cpp  file_helper.hpp
src/shared/window/: window.hpp
src/shared/window/platform/: glfw_vulkan_window.cpp  glfw_window.cpp
